--- a/composer.json
+++ b/composer.json
@@ -21,21 +21,35 @@
     }
   },
   "config": {
-    "sort-packages": true
+    "optimize-autoloader": true,
+    "sort-packages": true,
+    "preferred-install": "dist",
+    "allow-plugins": {
+      "infection/extension-installer": true,
+      "composer/package-versions-deprecated": true
+    }
   },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "funding": [
+    {
+      "type": "patreon",
+      "url": "https://www.patreon.com/flavioheleno"
+    }
+  ],
   "require": {
     "php": ">=8.0",
     "embedded-php/core": "dev-main"
   },
   "require-dev": {
-    "infection/infection": "^0.21.5 || ^0.22.0 || ^0.23.0 || ^0.24.0 || ^0.25.0",
-    "php-parallel-lint/php-parallel-lint": "^1.2",
-    "phpstan/phpstan": "^0.12.58",
+    "infection/infection": "^0.25.0",
+    "php-parallel-lint/php-parallel-lint": "^1.3",
+    "phpstan/phpstan": "^0.12.90",
     "phpunit/phpunit": "^9.5",
-    "psy/psysh": "^0.10.5",
+    "psy/psysh": "^0.10.8",
     "roave/security-advisories": "dev-master",
-    "squizlabs/php_codesniffer": "^3.5",
-    "vimeo/psalm": "^4.3"
+    "squizlabs/php_codesniffer": "^3.6",
+    "vimeo/psalm": "^4.8"
   },
   "scripts": {
     "console": "vendor/bin/psysh",
